--- a/src/App.css
+++ b/src/App.css
@@ -23,37 +23,6 @@
   color: #67fae7;
 }
 
-/*   
-.line-1{
- 
-  width: 10em;
-  margin: 0 auto;
-  border-right: 2px solid rgba(255,255,255,.75);
-  
-  white-space: nowrap;
-  overflow: hidden;
-   transform: translateY(-50%);     
-} */
-
-/* Animation */
-/* .anim-typewriter{
-
-
-animation: typewriter 4s steps(34) 1s infinite normal both,
-           blinkTextCursor 2s steps(44) infinite normal;
-
-          
-} */
-
-/* @keyframes typewriter{
-from{width: 0;}
-to{width: 10em;}
-}
-@keyframes blinkTextCursor{
-from{border-right-color: rgba(255,255,255,.75);}
-to{border-right-color: transparent;}
-} */
-
 
 .laptop-box{
   /* align-content: center; */
@@ -89,22 +58,21 @@ to{border-right-color: transparent;}
 
   
   .name{
-    font-size: 2.35rem;
+    font-size: 2.25rem;
   }
-  .work{
-    font-size: 2rem;
-  }
+ 
 }
 
 .Typewriter__wrapper {
   font-weight: bolder;
   text-align: left;
   font-size: 3rem;
-  color: #57c5b6 ;
+  color: #64daca ;
 }
 .Typewriter__cursor {
   font-size: 3.4rem !important;
   color: #62ced6 !important;
+  font-weight: 700;
 }
 
 @media (max-width: 767px) {
@@ -114,7 +82,9 @@ to{border-right-color: transparent;}
     position: absolute !important;
   }
   .Typewriter__cursor {
+    font-size: 2.2rem !important;
     display: none !important;
+    font-weight: 700;
   }
 }
 
