--- a/src/App.css
+++ b/src/App.css
@@ -68,6 +68,7 @@
   text-align: left;
   font-size: 3rem;
   color: #64daca ;
+  font-weight: 700;
 }
 .Typewriter__cursor {
   font-size: 3.4rem !important;
@@ -77,12 +78,12 @@
 
 @media (max-width: 767px) {
   .Typewriter__wrapper {
-    font-size: 2rem !important;
-    font-weight: 600 !important;
+    font-size: 1.65rem !important;
+    font-weight: 700 !important;
     position: absolute !important;
   }
   .Typewriter__cursor {
-    font-size: 2.2rem !important;
+    font-size: 2rem !important;
     display: none !important;
     font-weight: 700;
   }
