--- a/src/App.css
+++ b/src/App.css
@@ -102,7 +102,7 @@
 
 @media screen and (min-width: 300px) and (max-width: 1000px) {
   .laptop-box{
-    margin-top: 4rem;
+    margin-top: 2rem;
     align-items: center;
     justify-content: center;
   }
@@ -206,6 +206,18 @@ margin-top: 8rem;
     
     color: #ffffff;
   }
+  .icon-connect{
+    margin: 1rem;
+    border-radius: 100%;
+    width: 1.75rem;
+    height: 1.75rem;
+    text-align: center;
+  }
+  
+  .iconLogo{
+    margin-top: 0.6rem;
+    margin-bottom: 0.5rem;
+  }
   
 }
 .connect h2{
@@ -217,14 +229,15 @@ margin-top: 8rem;
 .icon-connect{
   margin: 1rem;
   border-radius: 100%;
-  width: 3rem;
-  height: 3rem;
+  width: 2.5rem;
+  height: 2.5rem;
   text-align: center;
 }
 
 .iconLogo{
-  margin-top: 0.6rem;
-  margin-bottom: 0.5rem;
+  margin-top: 0.4rem;
+  margin-bottom: 0.4rem;
+  margin-right: 0.1rem;
 }
 .icon-connect:hover{
   
