--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,8 @@ body {
   /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
   'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
   sans-serif; */
-  /* font-family: 'Montserrat', sans-serif;
-  font-family: 'Ubuntu', sans-serif; */
+  font-family: 'Montserrat', sans-serif;
+  font-family: 'Ubuntu', sans-serif;
   /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif; */
