--- a/src/App.css
+++ b/src/App.css
@@ -406,13 +406,16 @@ box-shadow:0px 0px 3px 3px #77ffed;
 }
 .cardChanges{
   z-index: 0;
+  text-align: left;
   align-items: center;
   /* margin: 16% 3% 3% 3%; */
   /* margin: 2% 2% 2% 2%; */
   /* margin-left: auto;
   margin-right: auto; */
   margin: auto;
-
+margin-left: 2%;
+margin-right: 2%;
+margin-bottom: 2%;
  /* background-color: transparent; */
  border-color: #f4fffe;
  color: #d6faf6;
@@ -424,8 +427,8 @@ justify-content: center;
 }
 .fun-page{
   /* margin-top: 2%; */
-  padding-top: 8%;
-  margin-bottom: 15%;
+  padding-top: 6%;
+  margin-bottom: 12%;
 }
 @media (max-width: 767px) {
   .fun-page{
